# governance-app

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  config.example.toml  env.example  setup_sqlx.sh
.github/workflows/: governance-app-ci.yml
.sqlx/: query-f3f07d5ea58ace6f2387b547d1590461e4a7c64a1848a12991c44f20cb4913b7.json
config/: README.md  app.toml  production.toml  production.toml.example  testnet.toml
docs/: API_REFERENCE.md  AUDIT_LOG_SYSTEM.md  CONFIGURATION.md  CONFIG_INTEGRATION.md  CROSS_LAYER_VALIDATION.md  DEVELOPMENT.md  GETTING_STARTED.md  NOSTR_INTEGRATION.md  OTS_INTEGRATION.md  README.md  SERVER_AUTHORIZATION.md  TROUBLESHOOTING.md  VERIFICATION.md
migrations/: 001_initial_schema.sql  002_emergency_mode.sql  003_audit_log.sql  004_economic_nodes.sql  004_emergency_tiers.sql  005_governance_fork.sql  006_key_metadata.sql
migrations-postgres/: 001_initial_schema.sql
scripts/: backup_sqlite.sh  migrate_sqlite_to_postgres.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/audit/: entry.rs  logger.rs  merkle.rs  mod.rs  verify.rs
src/authorization/: mod.rs  server.rs  verification.rs
src/config/: loader.rs
src/crypto/: key_management.rs  mod.rs  multisig.rs  signatures.rs
src/database/: mod.rs  models.rs  queries.rs  schema.rs
src/database/migrations/: 004_server_authorization.sql
src/economic_nodes/: mod.rs  registry.rs  types.rs  veto.rs
src/enforcement/: decision_log.rs  merge_block.rs  mod.rs  status_checks.rs
src/fork/: adoption.rs  dashboard.rs  detection.rs  executor.rs  export.rs  mod.rs  types.rs  versioning.rs
src/github/: client.rs  cross_layer_status.rs  file_operations.rs  mod.rs  types.rs  webhooks.rs
src/nostr/: client.rs  events.rs  mod.rs  publisher.rs
src/ots/: anchor.rs  client.rs  mod.rs  verify.rs
src/validation/: content_hash.rs  cross_layer.rs  emergency.rs  equivalence_proof.rs  mod.rs  review_period.rs  signatures.rs  threshold.rs  tier_classification.rs  verification_check.rs  version_pinning.rs
src/webhooks/: comment.rs  github.rs  github_integration.rs  mod.rs  pull_request.rs  push.rs  review.rs
tests/: e2e_test.rs  economic_nodes_test.rs  github_integration_test.rs  governance_fork_test.rs  integration_test.rs  simple_test.rs  test_runner.rs
tests/common/: mod.rs
tests/integration/: cross_layer_sync_tests.rs  e2e_tests.rs  webhook_tests.rs
tests/unit/: crypto_tests.rs  database_tests.rs  enforcement_tests.rs  github_tests.rs  validation_tests.rs
