[package]
name = "governance-app"
version = "0.1.0"
edition = "2021"
authors = ["BTCDecoded Contributors"]
license = "MIT"
description = "GitHub App for cryptographic governance enforcement across BTCDecoded repositories"
repository = "https://github.com/BTCDecoded/governance-app"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# GitHub API
octocrab = "0.38"
jsonwebtoken = "9.2"

# Database
sqlx = { version = "0.8.1", features = ["postgres", "sqlite", "runtime-tokio-rustls", "chrono", "json", "migrate"] }

# Cryptography (Bitcoin-compatible)
secp256k1 = { version = "0.28", features = ["rand"] }
bitcoin = "0.31"
sha2 = "0.10"
hex = "0.4"

# Governance crypto primitives
developer-sdk = { path = "../developer-sdk" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Glob patterns
glob = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Random number generation
rand = "0.8"

# Nostr protocol
nostr-sdk = "0.27"

# OpenTimestamps
opentimestamps = "0.1"

# Additional dependencies for cross-layer validation
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"

[[bin]]
name = "governance-app"
path = "src/main.rs"

[[bin]]
name = "key-manager"
path = "src/bin/key_manager.rs"

[[bin]]
name = "test-content-hash"
path = "src/bin/test_content_hash.rs"

[[bin]]
name = "test-content-hash-standalone"
path = "src/bin/test_content_hash_standalone.rs"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6"
tempfile = "3.8"




